Fix explosion mixin that caused crash